--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,5 +1,5 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T2JGST8W6S"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-T2JGST8W6S"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -7,3 +7,4 @@
 
   gtag('config', 'G-T2JGST8W6S');
 </script>
+ -->
